Tue Aug 20 19:39:03 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* file.c (rb_file_s_expand_path): accept drive letter on Cygwin.

	* file.c (is_absolute_path): ditto.

Mon Aug 19 19:01:55 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* misc/inf-ruby.el (inf-ruby-keys): ruby-send-definition
	  conflicted with ruby-insert-end.

	* misc/inf-ruby.el (inferior-ruby-mode): compilation-minor-mode.

	* misc/inf-ruby.el (ruby-send-region): send as here document to
	  adjust source file/line.  [ruby-talk:47113], [ruby-dev:17965]

	* misc/inf-ruby.el (ruby-send-terminator): added to make unique
	  terminator.

Mon Aug 19 15:38:44 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (sort_2): comparison should be done as signed long.

	* array.c (sort_2): should return int, not VALUE.

Mon Aug 19 12:38:33 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* eval.c (rb_thread_save_context, rb_thread_restore_context):
	  save/restore SEH chain on MS-Windows at thread switch.
	  [ruby-win32:273]

	* eval.c (win32_get_exception_list, win32_set_exception_list):
	  added.

Sat Aug 17 23:01:25 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (sort_2): *a - *b may overflow.

Sat Aug 17 00:25:08 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_new2): len*sizeof(VALUE) may be a positive value.

	* array.c (rb_ary_initialize): ditto.

Thu Aug 15 00:48:46 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (rb_reg_initialize): should not modify frozen Regexp.

Tue Aug 13 00:37:11 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (rb_uint2big): there should be no zero sized bignum.

Mon Aug 12 23:45:28 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/extmk.rb.in: extmake() that works properly for both tkutil
	  (tk/tkutil.so) and digest/sha1.

Wed Aug  7 09:51:54 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* hash.c (rb_hash_equal): should check default values.
